--- a/angular.json
+++ b/angular.json
@@ -27,9 +27,15 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              {
+                "input": "node_modules/bootstrap/dist/css/bootstrap.min.css"
+              }
             ],
-            "scripts": []
+            "scripts": [
+              {
+                "input": "./node_modules/jquery/dist/jquery.min.js"
+              }
+            ]
           },
           "configurations": {
             "production": {
